--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 :root {
   --clr-primary-900: #1f3251;
   --clr-primary-600: #7b879d;
-  --clr-neutral-300: #d6e2f0;
+  --clr-primary-300: #d6e2f0;
+  --clr-primary-100: #ffffff;
 
   --ff-primary: "Outfit", sans-serif;
 
@@ -20,7 +21,7 @@
 }
 
 body {
-  background-color: var(--clr-neutral-300);
+  background-color: var(--clr-primary-300);
   font-family: var(--ff-primary);
   text-align: center;
   min-height: 100vh;
@@ -32,23 +33,22 @@ body {
 }
 
 .card {
-  background-color: white;
-  border-radius: 15px;
+  background-color: var(--clr-primary-100);
+  border-radius: 22.5px;
   padding: 1rem;
-  width: calc(280px + 2rem);
-  box-shadow: 0 0.25rem 0.25rem rgba(0 0 0 / 0.3);
+  width: 19.5rem;
+  box-shadow: 0 1rem 1rem rgba(0 0 0 / 0.1);
 }
 
 .card > img {
-  width: 280px;
-  height: 280px;
+  max-width: 100%;
   border-radius: 15px;
 }
 
 .card > h1 {
+  color: var(--clr-primary-900);
   font-size: var(--fs-700);
   font-weight: var(--fw-bold);
-  color: var(--clr-primary-900);
 }
 
 .card > p {
